@@ -1,3 +1,10 @@
+Tue Oct 12 08:06:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * tests/Bug_3911_Regression_Test.cpp:
+        * tests/run_test.lst:
+        * tests/tests.mpc:
+          Added reproducer test for Bugzilla #3911.
+
 Mon Oct 11 16:31:12 UTC 2010  Adam Mitz  <mitza@ociweb.com>
 
         * bin/DependencyGenerator/GNUObjectGenerator.pm:
